--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "firebase": "^8.2.6",
+    "fluent-ffmpeg": "^2.1.2",
+    "i": "^0.3.6",
     "ionicons": "^5.4.0",
     "localforage": "^1.9.0",
+    "npm": "^7.5.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "typescript": "^4.1.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
@@ -63,7 +67,8 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "2.4.6"
+    "@capacitor/cli": "2.4.6",
+    "@types/uuid": "^8.3.0"
   },
   "description": "An Ionic project"
 }
