--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ionicons": "^5.4.0",
     "localforage": "^1.9.0",
     "npm": "^7.5.3",
+    "push.js": "^1.0.12",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
@@ -29,6 +30,7 @@
     "typescript": "^4.1.3",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
+    "whatsapp-web.js": "^1.12.5",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
     "workbox-cacheable-response": "^5.1.4",
@@ -42,11 +44,13 @@
     "workbox-strategies": "^5.1.4",
     "workbox-streams": "^5.1.4"
   },
+  "main": "public/electron.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\""
   },
   "eslintConfig": {
     "extends": [
@@ -68,7 +72,9 @@
   },
   "devDependencies": {
     "@capacitor/cli": "2.4.6",
-    "@types/uuid": "^8.3.0"
+    "@types/uuid": "^8.3.0",
+    "electron": "^11.3.0",
+    "electron-builder": "^22.9.1"
   },
   "description": "An Ionic project"
 }
